<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp">

    <!-- App Logo / Title -->

    <!-- Subtitle -->

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/kaushan_script"
        android:text="Whimsy"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="Sign-In"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <!-- Email Input -->

    <!-- Password Input -->

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_field"
        android:hint="Username/Email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Sign In Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_btn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/blue"
        android:text="Sign In"
        app:cornerRadius="14dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        android:height="48dp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/signIn_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_effect"/>

    <!-- Sign Up Redirect -->
    <TextView
        android:id="@+id/login_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New here? Sign Up..."
        android:height="48dp"
        android:textSize="14sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_effect" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/login_redirect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
